feat: add best trader

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,10 @@
 </head>
 <body>
     
-    
+    <nav class="nav-menu">
+        <a href="/" class="nav-link active">Tokens</a>
+        <a href="/traders" class="nav-link">Traders</a>
+    </nav>
 
 
     <!-- Filtres -->
